--- a/diapositivas/Proceso_osmótico.html
+++ b/diapositivas/Proceso_osmótico.html
@@ -16,7 +16,7 @@
             <div class="content-wrapper">
                 <div class="text-container">
                     <p>El proceso que se sigue para obtener energía es el siguiente:<p></p>
-                        Con el principio osmótico que genera una presión natural. Esa presión se usa para mover una turbina conectada a un alternador, y así generar electricidad.
+                        El proceso osmótico genera una presión natural. Esa presión se usa para mover una turbina conectada a un alternador, y así generar electricidad.
                         
                         </p>
                 </div>
