--- a/diapositivas/TIpos_de_energia.html
+++ b/diapositivas/TIpos_de_energia.html
@@ -17,7 +17,7 @@
                 <div class="text-container">
                     <p>
                         PRO: 
-En este método, el agua dulce se mueve a través de una membrana hacia el agua de mar, aumentando su presión en el lado de agua de mar, aumentando la presión en el lado del agua de mar, que se usa para mover una turbina.
+En este método, el agua dulce se mueve a través de una membrana hacia el agua de mar, aumentando su presión en el lado de agua de mar, que se usa para mover una turbina.
 <p></p>RED: Se utilizan membranas de intercambio iónico para mover iones entre el agua dulce y el agua salada generando una corriente eléctrica directamente.
 
                     </p>
