--- a/diapositivas/comparativas.html
+++ b/diapositivas/comparativas.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="content-wrapper">
                 <div class="text-container">
-                    <p>Comparando con otras energías renovables a la osmótica le falta desarrollo porque su eficiencia es baja y sus costes muy altos.</p>
+                    <p>Comparando con otras energías renovables. La osmótica le falta desarrollo porque su eficiencia es baja y sus costes muy altos.</p>
                 </div>
                 <div class="image-container">
                     <img src="../images/comparacion.jpeg" alt="comparacion">
