--- a/diapositivas/componentes.html
+++ b/diapositivas/componentes.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="content-wrapper">
                 <div class="text-container">
-                    <p>- Membranas semipermeables <br> - Agua dulce y salada <br> - Sistema de membranas <br> - Sistema de recuperación de energía <br> - Turbinas <br> - Sistema de control <br> - Infraestructura tuberías y tanques</p>
+                    <p>- Membranas semipermeables <br> - Agua dulce y salada <br> - Sistema de recuperación de energía <br> - Sistema de control <br> - Turbinas <br> - Infraestructura tuberías y tanques</p>
                 </div>
                 <div class="image-container">
                     <img src="../images/componentes.jpeg" alt="Foto de ejemplo">
