--- a/diapositivas/desarrollo.html
+++ b/diapositivas/desarrollo.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="content-wrapper">
                 <div class="text-container">
-                    La idea de poder generar energía por ósmosis empezó en 1950, algunas innovaciones en estos años han sido estos:
+                    La idea de poder generar energía por ósmosis empezó en 1950, algunas innovaciones en estos años han sido estas:
                     <p></p> 
                     - Ósmosis (PRO) 1970
                     <p></p> 
