--- a/diapositivas/estudios_exitosos.html
+++ b/diapositivas/estudios_exitosos.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="content-wrapper">
                 <div class="text-container">
-                    <p>Esta central se construyó con el objetivo de demostrar la viabilidad de la generación de energía osmótica RED. Actualmente el proyecto sigue en pie</p>
+                    <p>REDstack, esta central se construyó con el objetivo de demostrar la viabilidad de la generación de energía osmótica RED. Actualmente el proyecto sigue en pie</p>
                 </div>
                 <div class="image-container">
                     <img src="../images/exitosos.jpeg" alt="REDstack">
