--- a/diapositivas/Futuro.html
+++ b/diapositivas/Futuro.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="content-wrapper">
                 <div class="text-container">
-                    <p>El futuro de la energía osmótica depende de los avances que cosnigamos los más importantes son:<br>- Desarrollo en membranas más duraderas<br>- Construir plantas híbridas</p>
+                    <p>El futuro de la energía osmótica depende de los avances que cosnigamos, los más importantes son:<br>- Desarrollo en membranas más duraderas<br>- Construir plantas híbridas</p>
                 </div>
                 <div class="image-container">
                     <img src="../images/futuro.png" alt="idea">
