--- a/diapositivas/limitaciones.html
+++ b/diapositivas/limitaciones.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="content-wrapper">
                 <div class="text-container">
-                    <p>Esta energía todavia tiene sus limitaciones ya que no se ha investigado mucho una de ellas puede ser: <br>- La baja eficiencia de las membranas<br>- Altos costos<br>- Baja densidad energética<br>- Desgaste de las membranas</p>
+                    <p>Esta energía todavia tiene sus limitaciones ya que no se ha investigado mucho. Algunas son: <br>- La baja eficiencia de las membranas<br>- Altos costos<br>- Baja densidad energética<br>- Desgaste de las membranas</p>
                 </div>
                 <div class="image-container">
                     <img src="../images/limitaciones.png" alt="Bateria">
