saul romero dni

--- a/midni.html
+++ b/midni.html
@@ -13,9 +13,9 @@
 
 
     <div class="container-gris" id="dniContainer">
-        <p id="minombre">DAVID SUÁREZ ALMEIDA</p>
+        <p id="minombre">SAÚL ROMERO GUERRA</p>
         <p>DNI</p>
-        <p id="dninum">NUM: 54270266-H</p>
+        <p id="dninum">NUM: 45396597W </p>
     </div>
     <div id="menuOpciones" class="overlay-menu" style="display: none;">
         <a href="dni.html" class="lightbluebutton">VER DOCUMENTO</a>
