--- a/dni.html
+++ b/dni.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 <body>
     <a id="atras" href="javascript:history.back()" >mi DNI</a>
-    <img src="images/midnifake.png" class="dnifoto">
+    <img src="images/foto_dni_saul.png" class="dnifoto">
     <div class="container-gris">
         <h3>AUTENTICACIÓN</h3>
         <p>Autenticación Activa</p>
