--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2 class="tittle">INTEREIDAS</h2>
   </header>
   <p id="subtitle-azul">miDNI</p>
-  <p class="subtitle-gris">VERSIÓN 7.2</p>>
+  <p class="subtitle-gris">VERSIÓN 7.2</p>
   <div class="container">
     <a href="{% url 'inicio_sesion' %}" class="boton-gris">
       <div class="contenedor-texto-boton">
