--- a/dni.html
+++ b/dni.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <body>
-    <a id="atras" href="javascript:history.back()" >mi DNI</a>
+    <a id="atras" href="javascript:history.back()">
+        <span class="material-icons" style="vertical-align: middle; font-size: 20px; margin-right: 6px;">arrow_back_ios</span>
+        miDNI
+    </a>
+
     <img src="images/foto_dni_saul.png" class="dnifoto">
     <div class="container-gris">
         <h3>AUTENTICACIÓN</h3>
