--- a/index.html
+++ b/index.html
@@ -33,15 +33,17 @@
   </div>
 
 
-  <footer>
-    <p class="subtitle-gris">Soporte técnico:</p>
-    <p class="footer-azul">
-      asistencia@intereidas.com
-    </p>
-    <p class="boton-normal">VIDEO TUTORIALES</p>
-    <p class="footer-azul">Aviso legal</p>
+<footer>
+  <p class="subtitle-gris">Soporte técnico:</p>
+  <p class="footer-azul">asistencia@intereidas.com</p>
 
-  </footer>
+  <div class="video-tutoriales-container">
+    <p class="letra-normal video-tutoriales-text">VIDEO TUTORIALES</p>
+  </div>
+
+  <p class="footer-azul">Aviso legal</p>
+</footer>
+
 
 </body>
 
