--- a/midni.html
+++ b/midni.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mi DNI</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 <body>
     
-        <a id="atras" href="javascript:history.back()" >Atrás</a>
+       <a id="atras" href="javascript:history.back()">
+            <span class="material-icons" style="vertical-align: middle; font-size: 20px; margin-right: 6px;">arrow_back_ios</span>
+            Atrás
+        </a>
+
         
 
 
