--- a/midni.html
+++ b/midni.html
@@ -21,7 +21,7 @@
     <div class="container-gris" id="dniContainer">
         <p id="minombre">SAÚL ROMERO GUERRA</p>
         <p>DNI</p>
-        <p id="dninum">NUM: 45396597W </p>
+        <p id="dninum">NUM: 45396597-W </p>
     </div>
     <div id="menuOpciones" class="overlay-menu" style="display: none;">
         <a href="dni.html" class="lightbluebutton">VER DOCUMENTO</a>
