--- a/dni.html
+++ b/dni.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
 <body>
-    <a id="atras" href="javascript:history.back()">
-        <span class="material-icons" style="vertical-align: middle; font-size: 20px; margin-right: 6px;">arrow_back_ios</span>
-        miDNI
-    </a>
 
-    <img src="images/foto_dni_saul.png" class="dnifoto">
-    <div class="container-gris">
-        <h3>AUTENTICACIÓN</h3>
-        <p>Autenticación Activa</p>
-        <p>Autenticación Pasiva</p>
-        <p>Serial <br>number:-1</p>
-        <p>Signature<br>algorithm:sha256WithRSAEncryption</p>
-        <p>Public key<br>algorithm: rsaEncryption</p>
-        <p>Certificate<br>fingerprint: 10:FD:6a:F5:77:8D:78:74:6D:69:A5:A9:F4:09:49:DF</p>
-        <p>Issuer:CN=CSCA SPAIN,serialNumber=3,O=DIRECCION GENERAL DE LA POLICIA,C=ES </p>
-        <p>Subject:CN=DS n-eID SPAIN,OU=PASSPORT,O=DIRECCION GENERAL DE LA POLICIA,C=ES</p>
-        <p>Valid from: Valid from: Apr 21 08:07:32 2021 GMT</p>
-        <p>Valid to: Valid to: Jul 21 08:07:32 2031 GMT</p>
+  <a id="atras" href="javascript:history.back()">
+    <span class="material-icons">arrow_back_ios</span>
+    miDNI
+  </a>
 
+  <img src="images/foto_dni_saul.png" class="dnifoto" />
 
+  <div class="container-gris">
+    <h3>AUTENTICACIÓN</h3>
+    <p>Autenticación Activa</p>
+    <p>Autenticación Pasiva</p>
+    <p>Serial <br>number:-1</p>
+    <p>Signature<br>algorithm:sha256WithRSAEncryption</p>
+    <p>Public key<br>algorithm: rsaEncryption</p>
+    <p>Certificate<br>fingerprint: 10:FD:6a:F5:77:8D:78:74:6D:69:A5:A9:F4:09:49:DF</p>
+    <p>Issuer:CN=CSCA SPAIN,serialNumber=3,O=DIRECCION GENERAL DE LA POLICIA,C=ES </p>
+    <p>Subject:CN=DS n-eID SPAIN,OU=PASSPORT,O=DIRECCION GENERAL DE LA POLICIA,C=ES</p>
+    <p>Valid from: Apr 21 08:07:32 2021 GMT</p>
+    <p>Valid to: Jul 21 08:07:32 2031 GMT</p>
+  </div>
 
-
-    </div>
 </body>
-</html>      
+</html>
